<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mikeandtyler.travelapp.CreateEventFrag"
    android:onClick="submitEvent">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/createEventTitle"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:id="@+id/createEventLayout">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_gravity="center_horizontal" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/travelSpinner"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationText"
                android:layout_gravity="center_horizontal"
                android:hint="@string/setLocation" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/endLocation"
                android:layout_gravity="center_horizontal"
                android:hint="@string/setDestination"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripStart"
                android:id="@+id/startDatePickerText"
                android:layout_gravity="center_horizontal" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripEnd"
                android:id="@+id/endDatePickerText"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endPicker"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setStartTime"
                android:id="@+id/setStartTime"
                android:layout_gravity="center_horizontal" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:id="@+id/timePicker"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/travelNumber"
                android:layout_gravity="center_horizontal"
                android:hint="@string/flightNumber"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/infoText"
                android:layout_gravity="center_horizontal"
                android:hint="Additional Information" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitTrip"
                android:id="@+id/button5"
                android:layout_gravity="center_horizontal|bottom"
                android:onClick="submitEvent" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
